# artifact-plugin

./: .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
artifact/: pyproject.toml
artifact-documents/: README.md  pyproject.toml
artifact-documents-plugin/: README.md  pyproject.toml
artifact-documents-plugin/.claude-plugin/: plugin.json
artifact-documents-plugin/artifact-schemes/document/: README.md  scheme.py  scheme.toml
artifact-documents-plugin/artifact-storage/document-confluence/: README.md  storage.py  storage.toml
artifact-documents-plugin/artifact-templates/: design-document.content.toml  design-document.jinja.md  implementation-plan.content.toml  implementation-plan.jinja.md  release-note.content.toml  release-note.jinja.md  requirement.content.toml  requirement.jinja.md  review-note.content.toml  review-note.jinja.md  test-plan.content.toml  test-plan.jinja.md  triage-note.content.toml  triage-note.jinja.md  user-story.content.toml  user-story.jinja.md
artifact-documents-plugin/scripts/artifactlib_docs/: __init__.py
artifact-documents-plugin/tests/: conftest.py  test_document_file_storage.py  test_template_instantiate.py
artifact-documents/.claude-plugin/: plugin.json
artifact-documents/artifact-backends/document-confluence/: artifact.sh
artifact-documents/artifact-templates/: design-document.md  implementation-plan.md  release-note.md  requirement.md  review-note.md  test-plan.md  triage-note.md  user-story.md
artifact-github-plugin/: README.md  pyproject.toml
artifact-github-plugin/.claude-plugin/: plugin.json
artifact-github-plugin/artifact-schemes/branch/: README.md  scheme.py  scheme.toml
artifact-github-plugin/artifact-schemes/gist/: README.md  scheme.py  scheme.toml
artifact-github-plugin/artifact-schemes/issue/: README.md  scheme.py  scheme.toml
artifact-github-plugin/artifact-schemes/milestone/: README.md  scheme.py  scheme.toml
artifact-github-plugin/artifact-schemes/pr/: README.md  scheme.py  scheme.toml
artifact-github-plugin/artifact-schemes/release/: README.md  scheme.py  scheme.toml
artifact-github-plugin/artifact-schemes/tag/: README.md  scheme.py  scheme.toml
artifact-github-plugin/artifact-storage/gh-branch/: README.md  storage.py  storage.toml
artifact-github-plugin/artifact-storage/gh-gist/: README.md  storage.py  storage.toml
artifact-github-plugin/artifact-storage/gh-issue/: README.md  storage.py  storage.toml
artifact-github-plugin/artifact-storage/gh-milestone/: README.md  storage.py  storage.toml
artifact-github-plugin/artifact-storage/gh-pr/: README.md  storage.py  storage.toml
artifact-github-plugin/artifact-storage/gh-release/: README.md  storage.py  storage.toml
artifact-github-plugin/artifact-storage/gh-tag/: README.md  storage.py  storage.toml
artifact-github-plugin/scripts/artifactlib_gh/: __init__.py  gh.py
artifact-github-plugin/tests/: conftest.py  test_gh_schemes.py
artifact-plugin/: DESIGN.md  README.md  pyproject.toml
artifact-plugin/.claude-plugin/: plugin.json
artifact-plugin/artifact-schemes/artifact-template/: README.md  scheme.py  scheme.toml
artifact-plugin/artifact-schemes/authors/: README.md  scheme.py  scheme.toml
artifact-plugin/artifact-schemes/bundled_in/: README.md  scheme.py  scheme.toml
artifact-plugin/artifact-schemes/cites/: README.md  scheme.py  scheme.toml
artifact-plugin/artifact-schemes/closes/: README.md  scheme.py  scheme.toml
artifact-plugin/artifact-schemes/composed_of/: README.md  scheme.py  scheme.toml
artifact-plugin/artifact-schemes/conversation/: README.md  scheme.py  scheme.toml
artifact-plugin/artifact-schemes/depends_on/: README.md  scheme.py  scheme.toml
artifact-plugin/artifact-schemes/mentions/: README.md  scheme.py  scheme.toml
artifact-plugin/artifact-schemes/notifications/: README.md  scheme.py  scheme.toml
artifact-plugin/artifact-schemes/preferences/: README.md  scheme.py  scheme.toml
artifact-plugin/artifact-schemes/pydantic-schema/: README.md  scheme.py  scheme.toml
artifact-plugin/artifact-schemes/references/: README.md  scheme.py  scheme.toml
artifact-plugin/artifact-schemes/status/: README.md  scheme.py  scheme.toml
artifact-plugin/artifact-schemes/supersedes/: README.md  scheme.py  scheme.toml
artifact-plugin/artifact-schemes/tags/: README.md  scheme.py  scheme.toml
artifact-plugin/artifact-schemes/validates/: README.md  scheme.py  scheme.toml
artifact-plugin/hooks/: hooks.json  sessionstart-discover.py
artifact-plugin/scripts/: discover.py  graph.py  run-provider.py
artifact-plugin/tests/: conftest.py  test_discover_and_registry.py  test_edges.py  test_file_storage.py  test_graph.py  test_mediator.py  test_preferences.py  test_render.py  test_scheme.py  test_toml.py  test_uri.py  test_validate.py
artifact/.claude-plugin/: plugin.json
artifact/hooks/: sessionstart-discover.sh
artifact/tests/: provider-conformance.sh
(+47 files in other folders)
