[project]
name = "artifact-plugin"
version = "2.0.2"
description = "Core artifact primitive for the cjhowe-us/artifact-plugin Claude Code plugin ecosystem."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Christian Howe", email = "cjhowe@users.noreply.github.com" }]
dependencies = [
  "pydantic>=2,<3",
  "tomlkit>=0.13",
  "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/cjhowe-us/artifact-plugin"
Source = "https://github.com/cjhowe-us/artifact-plugin"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-xdist>=3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/artifactlib"]

[tool.hatch.build.targets.sdist]
include = [
  "scripts/artifactlib",
  "README.md",
  "DESIGN.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
