[project]
name = "artifact"
version = "2.0.0"
description = "Core artifact primitive for the cjhowe-us/artifact Claude Code plugin ecosystem."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Christian Howe", email = "cjhowe@users.noreply.github.com" }]
dependencies = [
  "pydantic>=2,<3",
  "tomlkit>=0.13",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-xdist>=3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
